# ohos-rs

./: .gitignore  .oxfmtrc.json  .taplo.toml  Cargo.toml  LICENSE  justfile  release.toml
.cargo/: config.toml
.github/actions/build-ohos-examples/: action.yml
.github/workflows/: docker.yml  simple-test.yml
cli/cargo-ohrs/: Cargo.toml
cli/cargo-ohrs/src/: arg.rs  build.rs  doctor.rs  init.rs  main.rs
cli/cargo-ohrs/src/artifact/: mod.rs  tgz.rs
cli/cargo-ohrs/src/cargo/: mod.rs  run.rs
cli/cargo-ohrs/src/cli/: artifact.rs  build.rs  cargo.rs  init.rs  mod.rs  publish.rs
cli/cargo-ohrs/src/doctor/: mod.rs  render_result.rs  target.rs
cli/cargo-ohrs/src/init/: config.rs  mod.rs  package.rs  tmp.rs
cli/cargo-ohrs/src/marco/: mod.rs
cli/cargo-ohrs/src/publish/: mod.rs  tgz.rs  unix_publish.sh
cli/cargo-ohrs/src/tmps/: mod.rs
cli/cargo-ohrs/src/util/: arch.rs  mod.rs  ohos.rs
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs  typegen.rs
crates/backend/src/codegen/: const.rs  enum.rs  fn.rs  struct.rs
crates/macro/: Cargo.toml  README.md
crates/macro/src/: compat_macro.rs  lib.rs
crates/macro/src/expand/: napi.rs  noop.rs
crates/macro/src/expand/typedef/: type_def.rs
crates/macro/src/parser/: attrs.rs  mod.rs
crates/napi/: Cargo.toml  README.md  build.rs
crates/napi/src/: async_work.rs  env.rs  lib.rs  sendable_resolver.rs  threadsafe_function.rs  tokio_runtime.rs  value_type.rs
crates/napi/src/bindgen_runtime/: callback_info.rs  js_values.rs  module_register.rs
crates/napi/src/bindgen_runtime/js_values/: arraybuffer.rs  bigint.rs  buffer.rs  class.rs  date.rs  external.rs  function.rs  map.rs  promise_raw.rs  serde.rs  string.rs  symbol.rs  task.rs
crates/napi/src/bindgen_runtime/js_values/stream/: read.rs  write.rs
crates/napi/src/js_values/: arraybuffer.rs  bigint.rs  boolean.rs  buffer.rs  de.rs  deferred.rs  function.rs  mod.rs  null.rs  object.rs  ser.rs  symbol.rs  undefined.rs  unknown.rs
crates/napi/src/ohos/: ark.rs  mod.rs  module.rs
crates/sys/: Cargo.toml  LICENSE
crates/sys/src/: functions.rs  lib.rs  types.rs
docker/: README.md  base.Dockerfile  ci.Dockerfile  component.txt  debian.Dockerfile  windows.Dockerfile
docs/: arkvm_crash_cases.md  arkvm_test_failure_groups.md  ets_napi_hybrid_host.md
examples/hello/: Cargo.toml
examples/hello/src/: lib.rs
examples/hello/src/async_work/: mod.rs
examples/hello/src/basic/: mod.rs
examples/hello/src/ohos/: mod.rs
examples/napi/: Cargo.toml  build.rs
examples/napi-compact-mode/: Cargo.toml
examples/napi-compact-mode/src/: array.rs  arraybuffer.rs  buffer.rs  class.rs  cleanup_env.rs  either.rs  env.rs  error.rs  external.rs  function.rs  global.rs  lib.rs  napi_version.rs  object.rs  serde.rs  string.rs  task.rs
examples/napi-compact-mode/src/napi4/: deferred.rs  mod.rs  tsfn.rs  tsfn_dua_instance.rs
examples/napi-compact-mode/src/napi5/: date.rs  mod.rs
examples/napi-compact-mode/src/napi6/: bigint.rs  instance.rs  mod.rs
examples/napi-compact-mode/src/napi7/: buffer.rs  mod.rs
examples/napi-compact-mode/src/napi8/: async_cleanup.rs  mod.rs  object.rs
examples/napi-compact-mode/src/tokio_rt/: mod.rs  read_file.rs
examples/napi-shared/: Cargo.toml
examples/napi-shared/src/: lib.rs
examples/napi/src/: array.rs  async.rs  async_generator_repro.rs  bigint.rs  callback.rs  class.rs  class_factory.rs  date.rs  either.rs  env.rs  error.rs  external.rs  fetch.rs  fn_strict.rs  fn_ts_override.rs  function.rs  generator.rs  js_mod.rs  lib.rs  lifetime.rs  nullable.rs  object.rs  promise.rs  reference.rs  scope.rs  serde.rs  shared.rs  stream.rs  string.rs  task.rs  threadsafe_function.rs  transparent.rs  type.rs  typed_array.rs
harmony-example/: .gitignore  README.md  code-linter.json5  oh-package.json5
harmony-example/AppScope/: app.json5
harmony-example/entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
scripts/: release-hook.sh  test.sh  zig-build.sh
scripts/arkvm/: build_host_libs.sh  compile_abc.sh  run_suites.sh  run_tests.sh  split_tests.sh
scripts/ci/: run_ets_napi_host_tests.sh
scripts/ohos/: arkvm_build_host_libs.sh  arkvm_compile_abc_in_docker.sh  arkvm_run_suites_in_docker.sh  run_split_tests_arkvm.sh  split_ohos_tests.sh
test/: README.md  suites.list
test/ohos/: suites.list
test/ohos/runtime/: console_shim.ts  no_ability_runner.ts
test/ohos/src/: List.test.ets
test/ohos/suites/: compat_mode_ArrayBuffer_test.ts  compat_mode_Array_test.ts  compat_mode_Buffer_test.ts  compat_mode_Class_test.ts  compat_mode_CleanEnv_test.ts  compat_mode_CreateExternal_test.ts  compat_mode_Either_test.ts  compat_mode_Env_test.ts  compat_mode_Function_test.ts  compat_mode_Global_test.ts  compat_mode_JsValue_test.ts  compat_mode_Object_test.ts  compat_mode_Spawn_test.ts  compat_mode_String_test.ts  compat_mode_Throw_test.ts  compat_mode_napi4_Deferred_test.ts  compat_mode_napi4_TokioRT_test.ts  (+15 more)
test/runtime/: console_shim.ts  no_ability_runner.ts
test/source/: List.test.ets
test/suites/: compat_mode_ArrayBuffer_test.ts  compat_mode_Array_test.ts  compat_mode_Buffer_test.ts  compat_mode_Class_test.ts  compat_mode_CleanEnv_test.ts  compat_mode_CreateExternal_test.ts  compat_mode_Either_test.ts  compat_mode_Env_test.ts  compat_mode_Function_test.ts  compat_mode_Global_test.ts  compat_mode_JsValue_test.ts  compat_mode_Object_test.ts  compat_mode_Spawn_test.ts  compat_mode_String_test.ts  compat_mode_Throw_test.ts  compat_mode_napi4_Deferred_test.ts  compat_mode_napi4_TSFNError_test.ts  compat_mode_napi4_ThreadsafeFunction_test.ts  compat_mode_napi4_TokioRT_test.ts  compat_mode_napi4_TokioReadFile_test.ts  compat_mode_napi5_Date_test.ts  compat_mode_napi6_Bigint_test.ts  compat_mode_napi6_InstanceData_test.ts  compat_mode_napi7_ArraryBuffer_test.ts  compat_mode_napi8_Object_test.ts  compat_mode_serde_De_test.ts  compat_mode_serde_Ser_test.ts  compat_mode_serde_SerdeJson_test.ts  napi_ErrorMessage_test.ts  napi_Genertor_test.ts  napi_ObjectAttr_test.ts  napi_Stricts_test.ts  napi_Value_test.ts  napi_Worker_test.ts
(+187 files in other folders)
