[workspace]
resolver = "2"
members  = ["crates/*", "examples/*", "cli/*"]

[workspace.lints.clippy]
dbg_macro        = "warn"
todo             = "warn"
unimplemented    = "warn"
print_stdout     = "warn" # Must be opt-in
print_stderr     = "warn" # Must be opt-in
allow_attributes = "warn"

[profile.release]
lto = true

[profile.wasi]
inherits  = "release"
opt-level = "z"
debug     = true

[profile.napi-rs-custom]
inherits      = "dev"
codegen-units = 1024
