[package]
name        = "cargo-ohrs"
version     = "0.0.4"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "a cli tool for ohos-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
