[package]
name        = "ohrs"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "a cli tool for ohos-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap     = { version = "4.4.8", features = ["derive"] }
fs_extra = "1.3.0"
cargo_metadata = "0.18.1"
once_cell = "1.19.0"