[package]
name        = "ohrs"
version     = "1.1.2"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "a cli tool for ohos-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_extra       = "1.3.0"
cargo_metadata = "0.18.1"
once_cell      = "1.19.0"
sha2           = "0.10.8"
serde          = "1.0.195"
serde_json     = "1.0.111"
regex          = "1.10.2"
flate2         = "1.0.28"
tar            = "0.4.40"
whoami         = "1.5.1"
owo-colors     = "4.0.0"
bpaf           = "0.9.20"
anyhow         = "1.0.75"
semver         = "1.0.23"
