[package]
description  = "Codegen backend for napi-harmony procedural macro"
edition      = "2021"
license      = "MIT"
name         = "napi-derive-backend-ohos"
readme       = "README.md"
repository   = "https://github.com/ohos-rs/ohos-rs"
rust-version = "1.80"
version      = "1.1.1"

[package.metadata.workspaces]
independent = true

[features]
noop     = []
strict   = []
type-def = ["semver"]

[dependencies]
convert_case = "0.8"
proc-macro2  = "1"
quote        = "1"
syn          = { version = "2", features = ["fold", "full", "extra-traits"] }

[dependencies.semver]
optional = true
version  = "1"

[dev-dependencies]
serde_json = "1"
