[package]
authors = [
  "LongYinan <lynweklm@gmail.com>",
  "Forehalo <forehalo@gmail.com>",
  "southorange0929 <southorange0929@foxmail.com>",
]
description = "N-API procedural macros"
edition = "2021"
keywords = ["NodeJS", "FFI", "NAPI", "n-api"]
license = "MIT"
name = "napi-derive-ohos"
readme = "README.md"
repository = "https://github.com/ohos-rs/ohos-rs"
rust-version.workspace = true
version = "1.1.6"

[package.metadata.workspaces]
independent = true

[features]
compat-mode = []
default     = ["type-def", "strict"]
full        = ["type-def", "strict", "compat-mode"]
noop        = ["napi-derive-backend-ohos/noop"]
strict      = ["napi-derive-backend-ohos/strict"]
tracing     = ["napi-derive-backend-ohos/tracing"]
type-def    = ["napi-derive-backend-ohos/type-def", "ctor"]

[dependencies]
convert_case             = "0.11"
ctor                     = { version = "0.6", optional = true }
napi-derive-backend-ohos = { version = "1.1.6", path = "../backend" }
proc-macro2              = "1"
quote                    = "1"
syn                      = { version = "2", features = ["fold", "full", "extra-traits"] }

[lib]
proc-macro = true
