[package]
authors = [
  "Nathan Sobo <nathan@github.com>",
  "Yinan Long <lynweklm@gmail.com>",
  "southorange0929 <southorange0929@foxmail.com>",
]
description = "N-API bindings"
edition = "2021"
keywords = ["NodeJS", "Node", "HarmonyOS", "NAPI", "n-api"]
license = "MIT"
name = "napi-ohos"
readme = "README.md"
repository = "https://github.com/ohos-rs/ohos-rs"
rust-version = "1.80"
version = "1.1.4"

[lib]
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.workspaces]
independent = true

[features]
async       = ["tokio_rt"]
chrono_date = ["chrono", "napi5"]
# Enable deprecated types and traits for compatibility
compat-mode        = []
default            = ["napi4"]                                                 # for most Node.js users
deferred_trace     = ["napi4"]
error_anyhow       = ["anyhow"]
experimental       = ["napi-sys-ohos/experimental"]
full               = ["latin1", "napi8", "async", "serde-json", "chrono_date"]
object_indexmap    = ["indexmap"]
latin1             = ["encoding_rs"]
napi1              = []
napi2              = ["napi1", "napi-sys-ohos/napi2"]
napi3              = ["napi2", "napi-sys-ohos/napi3"]
napi4              = ["napi3", "napi-sys-ohos/napi4"]
napi5              = ["napi4", "napi-sys-ohos/napi5"]
napi6              = ["napi5", "napi-sys-ohos/napi6"]
napi7              = ["napi6", "napi-sys-ohos/napi7"]
napi8              = ["napi7", "napi-sys-ohos/napi8"]
napi9              = ["napi8", "napi-sys-ohos/napi9"]
napi10             = ["napi9", "napi-sys-ohos/napi10"]
web_stream         = ["futures-core", "tokio-stream", "napi4", "tokio_rt"]
noop               = []
serde-json         = ["serde", "serde_json"]
serde-json-ordered = ["serde-json", "serde_json/preserve_order"]
tokio_fs           = ["tokio/fs"]
tokio_full         = ["tokio/full"]
tokio_io_std       = ["tokio/io-std"]
tokio_io_util      = ["tokio/io-util"]
tokio_macros       = ["tokio/macros"]
tokio_net          = ["tokio/net"]
tokio_process      = ["tokio/process"]
tokio_rt           = ["tokio", "napi4"]
tokio_signal       = ["tokio/signal"]
tokio_sync         = ["tokio/sync"]
tokio_test_util    = ["tokio/test-util"]
tokio_time         = ["tokio/time"]
tokio_tracing      = ["tokio/tracing"]
dyn-symbols        = ["napi-sys-ohos/dyn-symbols"]
# Add a runtime Node version detection
node_version_detect = []

[dependencies]
bitflags      = "2"
ctor          = "0.6.0"
nohash-hasher = "0.2.0"
rustc-hash    = "2.1.1"

[dependencies.anyhow]
optional = true
version  = "1"

[dependencies.napi-sys-ohos]
path    = "../sys"
version = "1.1.4"

[dependencies.encoding_rs]
optional = true
version  = "0.8"

[dependencies.chrono]
optional = true
version  = "0.4"

[target.'cfg(any(all(target_family = "wasm", tokio_unstable), not(target_family = "wasm")))'.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"], optional = true }

[target.'cfg(all(target_family = "wasm", not(tokio_unstable)))'.dependencies]
tokio = { version = "1", features = ["rt", "sync"], optional = true }

[dependencies.serde]
optional = true
version  = "1"

[dependencies.serde_json]
optional = true
version  = "1"

[dependencies.indexmap]
optional = true
version  = "2"

[dependencies.futures-core]
optional = true
version  = "0.3"

[dependencies.tokio-stream]
optional = true
version  = "0.1"

[build-dependencies]
napi-build-ohos = { path = "../build", version = "1.1.4" }
