[package]
authors                = ["LongYinan <lynweklm@gmail.com>", "southorange0929 <southornage0929@foxmail.com>"]
description            = "Harmony N-API raw binding"
edition                = "2021"
include                = ["src/**/*", "Cargo.toml"]
keywords               = ["NodeJS", "FFI", "NAPI", "n-api", "HarmonyOS"]
license                = "MIT"
name                   = "napi-sys-ohos"
readme                 = "README.md"
repository             = "https://github.com/ohos-rs/ohos-rs"
rust-version.workspace = true
version                = "1.1.6"

[features]
dyn-symbols  = []
experimental = []
napi1        = []
napi2        = ["napi1"]
napi3        = ["napi2"]
napi4        = ["napi3"]
napi5        = ["napi4"]
napi6        = ["napi5"]
napi7        = ["napi6"]
napi8        = ["napi7"]
napi9        = ["napi8"]
napi10       = ["napi9"]
ohos         = ["napi8"]

[package.metadata.workspaces]
independent = true

[dependencies]
libloading = { version = "0.9" }
