[package]
name    = "entry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos        = { path = '../../crates/napi' }
napi-derive-ohos = { path = '../../crates/macro' }

[build-dependencies]
napi-build-ohos = { path = '../../crates/build' }
