[package]
name    = "napi-compact-mode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
futures          = "0.3"
napi-ohos        = { path = "../../crates/napi", features = ["tokio_rt", "serde-json", "latin1", "compat-mode"] }
napi-derive-ohos = { path = "../../crates/macro", features = ["compat-mode"] }
serde            = "1"
serde_bytes      = "0.11"
serde_derive     = "1"
serde_json       = "1"
tokio            = { version = "1", features = ["default", "fs"] }

[build-dependencies]
napi-build-ohos = { path = "../../crates/build" }

[profile.release]
lto = true
