[package]
name    = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
snmalloc         = ["snmalloc-rs"]
dyn-symbols      = ["napi-ohos/dyn-symbols"]
error_try_builds = []

[dependencies]
napi-ohos = { path = '../../crates/napi', features = [
  "serde-json",
  "latin1",
  "chrono_date",
  "object_indexmap",
  "tokio",
  "async",
  "tokio_rt",
  "tokio_fs",
  "tokio_macros",
  "deferred_trace",
  "napi8",
  "node_version_detect",
] }
napi-derive-ohos = { path = '../../crates/macro' }
napi-shared = { path = "../napi-shared" }
chrono = "0.4.38"
futures = "0.3"
serde = "1"
serde_bytes = "0.11"
serde_derive = "1"
serde_json = "1"
indexmap = "2"
tokio = { version = "1", features = ["rt", "time"] }

[dependencies.snmalloc-rs]
version  = "0.3"
features = ["build_cc", "local_dynamic_tls"]
optional = true

[build-dependencies]
napi-build-ohos = { path = "../../crates/build" }

[profile.release]
lto = true
