[package]
name    = "example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
snmalloc         = ["snmalloc-rs"]
mimalloc         = ["mimalloc-safe"]
dyn-symbols      = ["napi-ohos/dyn-symbols"]
error_try_builds = []
noop             = ["napi-ohos/noop"]
cfg_attr_napi    = []                        # for testing cfg_attr(not(feature = "noop"), napi_derive::napi) attribute

[dependencies]
anyhow = "1"
chrono = "0.4"
futures = "0.3"
bytes = "1"
napi-derive-ohos = { path = "../../crates/macro", features = ["type-def"] }
napi-shared = { path = "../napi-shared" }
serde = "1"
serde_bytes = "0.11"
serde_derive = "1"
serde_json = "1"
indexmap = "2"
rustc-hash = "2"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
napi-ohos = { path = "../../crates/napi", default-features = false, features = [
  "serde-json",
  "latin1",
  "chrono_date",
  "object_indexmap",
  "tokio",
  "async",
  "tokio_rt",
  "tokio_macros",
  "tokio_io_util",
  "deferred_trace",
  "napi8",
  "web_stream",
  "error_anyhow",
] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1", features = ["rt", "time"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1", features = ["rt", "time", "fs"] }

[dependencies.snmalloc-rs]
version  = "0.3"
features = ["build_cc", "local_dynamic_tls"]
optional = true

[dependencies.mimalloc-safe]
version  = "0.1"
optional = true
features = ["skip_collect_on_exit"]

[build-dependencies]
napi-build-ohos = { path = "../../crates/build" }

[profile.release]
lto = true
